屏幕尺寸获取 API 测试，修复 debug 调试时报 The binary version of its metadata is 1.7.1, expected version is 1.5.1. 错误

--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
         tools:ignore="AllowBackup,UnusedAttribute">
         
         <activity
-            android:screenOrientation="landscape"
-            android:name=".java.MainActivity2"
+            android:name=".MainActivity2"
             android:exported="true">
 
             <intent-filter>
