辅助 B2 新马台空间相册上传失败

--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".AlbumActivity"/>
+
         <!--<activity android:name=".java.memory.MemoryListenerActivity"/>
         <activity android:name=".java.firebase.FireBaseActivity" />
         <service
