--- a/SwordDemoLibrary/settings.gradle
+++ b/SwordDemoLibrary/settings.gradle
@@ -1,4 +1,4 @@
-include ':connectivity'
+//include ':connectivity'
 //include ':script'
 //include ':gradlescript'
 //include ':loginlibrary'
@@ -6,7 +6,7 @@ include ':connectivity'
 //include ':gradlescript'
 //include ':loginlibrary'
 //include ':test'
-include ':groovypractice'
+//include ':groovypractice'
 include ':app'
 rootProject.name = "SwordDemoLibrary"
 //include ':scanner'
@@ -24,7 +24,7 @@ rootProject.name = "SwordDemoLibrary"
 //include ':floatball'
 //include ':androidapi'
 //include ':animations_transitions'
-include ':webbasecontent'
+//include ':webbasecontent'
 //include ':pluginable'
 //include ':plugin'
 //include ':androidarticle'
@@ -32,5 +32,5 @@ include ':webbasecontent'
 //include ':telegramsource'
 include ':codelibrary'
 //include ':hencoder'
-include ':openprojectcode'
-include ':jetpackcompose'
+//include ':openprojectcode'
+//include ':jetpackcompose'
