--- a/SwordDemoLibrary/build.gradle
+++ b/SwordDemoLibrary/build.gradle
@@ -1,18 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        compose_version = '1.0.1'
-    }
-    ext.kotlin_version = '1.6.0'
     repositories {
         google()
         mavenCentral()
+
+        maven {
+            url "https://repo1.maven.org/maven2/"
+        }
     }
+    
+    ext.kotlin_version = "1.4.10"
+    ext.compose_version = "1.0.1"
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.5'
+//        classpath 'com.google.gms:google-services:4.3.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,6 +26,10 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+
+        maven {
+            url "https://repo1.maven.org/maven2/"
+        }
     }
 }
 
