--- a/SwordDemoLibrary/jetpackcompose/build.gradle
+++ b/SwordDemoLibrary/jetpackcompose/build.gradle
@@ -26,26 +26,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
+    /*compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
+    }*/
+    /*kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
-    }
-    buildFeatures {
+        *//*useIR = true*//*
+    }*/
+    /*buildFeatures {
         compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+    }*/
+    /*composeOptions {
+        kotlinCompilerExtensionVersion ${compose_version}
         kotlinCompilerVersion '1.5.21'
-    }
-    packagingOptions {
+    }*/
+    /*packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
-    }
+    }*/
 }
 
 
