--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-	implementation "androidx.window:window-java:1.0.0"
+	//implementation "androidx.window:window-java:1.0.0"
 
     implementation project(":codelibrary")
     //log4j
