--- a/SwordDemoLibrary/codelibrary/build.gradle
+++ b/SwordDemoLibrary/codelibrary/build.gradle
@@ -41,6 +41,18 @@ dependencies {
     implementation 'net.dongliu:apk-parser:2.6.10'
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
 
+    implementation "androidx.window:window:1.0.0"
+
+    /*// For Java-friendly APIs to register and unregister callbacks
+    implementation "androidx.window:window-java:1.0.0"
+    // For RxJava2 integration
+    implementation "androidx.window:window-rxjava2:1.0.0"
+    // For RxJava3 integration
+    implementation "androidx.window:window-rxjava3:1.0.0"
+    // For testing
+    implementation "androidx.window:window-testing:1.0.0"*/
+    implementation "androidx.window:window:1.0.0"
+
 
 
     testImplementation 'junit:junit:4.+'
