--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-	compileSdkVersion 33 //compileSdkVersion 被丢弃
-	buildToolsVersion "33.0.0"  //buildToolsVersion 函数被丢弃
+	compileSdkVersion 32 //compileSdkVersion 被丢弃
+	buildToolsVersion "31.0.0"  //buildToolsVersion 函数被丢弃
 	defaultConfig {
 		applicationId "com.example.swordlibrary"
 		minSdk 22 //minSdkVersion 被丢弃
@@ -39,19 +39,29 @@ dependencies {
     // https://mvnrepository.com/artifact/log4j/log4j
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 
+	//retrofit
 	implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+	
 	implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
 	implementation 'io.reactivex.rxjava3:rxjava:3.0.13'
 	implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 	implementation 'com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0-RC8'
 	implementation 'com.google.android.material:material:1.4.0'
+	
+	//Glide 库依赖，用于图片加载
+	implementation 'com.github.bumptech.glide:glide:4.14.2'
+	annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
 	//LeakCanary：内存泄漏检测库
 	debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 	//debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
 	
+	//lifecycle-livedata
+	implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.5.1'
+	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
+	
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
