补充注释，同步工程

--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -27,8 +27,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+
+	//kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.20"
+	//协程相关依赖
+//	implementation "org.jetbrains.kotlinx:kotlinx:kotlinx-coroutines-core:1.6.0"
     implementation 'androidx.core:core-ktx:1.9.0' //compileSdkVersion 至少为 33
+
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
