--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -68,10 +68,10 @@ dependencies {
 	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
 	
-    testImplementation 'junit:junit:4.12'
+    /*testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'*/
 
 }
 
