扔物线高级课程-从 Retrofit 看 HTTP 原理学习代码

--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -46,11 +46,9 @@ dependencies {
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 
 	//retrofit
-	implementation 'com.squareup.retrofit2:retrofit:2.7.2'
-	
-	//Okio IO 操作开源库
-	
-	
+	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+	//Converter 依赖，用于将响应转成 
+	implementation "com.squareup.retrofit2:converter-gson"
 	
 	implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
