--- a/SwordDemoLibrary/codelibrary/build.gradle
+++ b/SwordDemoLibrary/codelibrary/build.gradle
@@ -59,3 +59,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+afterEvaluate {
+    println "after codelibrary config"
+}
