扔物线高级课程学习 - Gradle Plugin

--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.plugin.sword'
+//apply plugin: 'com.plugin.sword'
 
 
 android {
@@ -112,4 +112,3 @@ afterEvaluate {
 		println "${getName()}"
 	}
 }
-
