--- a/SwordDemoLibrary/build.gradle
+++ b/SwordDemoLibrary/build.gradle
@@ -14,7 +14,7 @@ buildscript {
     ext.compose_version = "1.0.1"
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
 //        classpath 'com.google.gms:google-services:4.3.5'
 
         // NOTE: Do not place your application dependencies here; they belong
