扔物线高级课程学习 - Gradle Plugin，仿照 ButterKnife 自定义注解处理器

--- a/SwordDemoLibrary/settings.gradle
+++ b/SwordDemoLibrary/settings.gradle
@@ -6,3 +6,6 @@ include ':leetcode'
 include ':datastruct'
 
 println "Hello setting.gradle"
+include ':processor'
+include ':lib_processor'
+include ':lib_annotation'
