--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     </queries>
 
     <application
-        android:name="com.sword.SwordApplication"
+        android:name="sword.SwordApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
