扔物线高级课程 - BlockCanary 源码解析 - 自定义 Gradle 插件，使用 ASM 修改 class 字节码

--- a/SwordDemoLibrary/buildSrc/build.gradle
+++ b/SwordDemoLibrary/buildSrc/build.gradle
@@ -16,4 +16,9 @@ repositories {
 
 dependencies {
     implementation 'com.android.tools.build:gradle:7.4.2'
+
+    //asm 官网：https://asm.ow2.io/
+    implementation "org.ow2.asm:asm:9.5"
+    implementation("org.ow2.asm:asm-commons:9.5")
+
 }
