--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -78,7 +78,12 @@ dependencies {
 	//LeakCanary：内存泄漏检测库
 	debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
 	//debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
+	//BlockCanary：检测卡顿 
 	debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
+	
+	//asm 官网：https://asm.ow2.io/
+	//maven 地址：https://mvnrepository.com/artifact/org.ow2.asm/asm
+	implementation("org.ow2.asm:asm:9.5")
 	
 	//lifecycle-livedata
 	implementation 'androidx.lifecycle:lifecycle-livedata-core-ktx:2.6.1'
