--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.plugin.sword'
+//apply plugin: 'com.plugin.sword'
+apply plugin: 'com.plugin.trace'
 
 
 android {
