--- a/SwordDemoLibrary/buildSrc/build.gradle
+++ b/SwordDemoLibrary/buildSrc/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     //asm 官网：https://asm.ow2.io/
     implementation "org.ow2.asm:asm:9.5"
     implementation("org.ow2.asm:asm-commons:9.5")
+    implementation 'commons-io:commons-io:2.13.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.10"
 }
