--- a/SwordDemoLibrary/build.gradle
+++ b/SwordDemoLibrary/build.gradle
@@ -1,6 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+    ext {
+        androidx_ktx_version = "1.6.0"
+        androidx_appcompat_version = "1.3.0"
+        androidx_mertial_version = "1.3.0"
+        mockitoVersion = "3.11.2"
+        junitVersion = "4.13.2"
+        androidXVersion = "1.4.0"
+        googleTruthVersion = "1.1.3"
+        compose_accompanist_version = "0.24.3-alpha"
+        kotlin_version = "1.7.21"
+        compose_version = "1.0.1"
+        matrix_version="2.1.0"
+    }
+
     repositories {
         google()
         mavenCentral()
@@ -10,15 +23,13 @@ buildscript {
         }
     }
     
-    ext.kotlin_version = "1.7.21"
-    ext.compose_version = "1.0.1"
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-//        classpath 'com.google.gms:google-services:4.3.5'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        //微信应用性能检测库
+        classpath ("com.tencent.matrix:matrix-gradle-plugin:$matrix_version") { changing = true }
     }
 }
 
@@ -35,16 +46,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-
-ext {
-    androidx_ktx_version = "1.6.0"
-    androidx_appcompat_version = "1.3.0"
-    androidx_mertial_version = "1.3.0"
-    mockitoVersion = "3.11.2"
-    junitVersion = "4.13.2"
-    androidXVersion = "1.4.0"
-    googleTruthVersion = "1.1.3"
-    compose_accompanist_version = "0.24.3-alpha"
 }
