--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -126,6 +126,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 	//Robolectric 依赖，用于测试
 	testImplementation 'org.robolectric:robolectric:4.9'
+	testImplementation 'org.jetbrains.kotlin:kotlin-test'
 	
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
