--- a/SwordDemoLibrary/build.gradle
+++ b/SwordDemoLibrary/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         googleTruthVersion = "1.1.3"
         compose_accompanist_version = "0.24.3-alpha"
         kotlin_version = "1.7.21"
-        compose_version = "1.0.1"
+        compose_version = "1.4.0-beta01"
         matrix_version="2.1.0"
     }
 
