--- a/SwordDemoLibrary/compose/build.gradle
+++ b/SwordDemoLibrary/compose/build.gradle
@@ -4,13 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.jetpackcompose"
-        minSdk 21
-        //noinspection OldTargetApi
-        targetSdk 31
+        minSdk 24
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -27,70 +26,71 @@ android {
         }
     }
     namespace 'com.example.jetpackcompose'
-    /*compileOptions {
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }*/
-    /*kotlinOptions {
+    }
+    kotlinOptions {
         jvmTarget = '1.8'
-        *//*useIR = true*//*
-    }*/
-    /*buildFeatures {
+    }
+    buildFeatures {
         compose true
-    }*/
-    /*composeOptions {
-        kotlinCompilerExtensionVersion ${compose_version}
-        kotlinCompilerVersion '1.5.21'
-    }*/
-    /*packagingOptions {
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.0"
+    }
+    packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
-    }*/
+    }
 }
 
 
 dependencies {
     
     //kotlin
-    //noinspection GradleDependency
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.9.0'
     
     //androidx
-    //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.window:window:1.0.0'
-    
-    //jetpack compose
-    //noinspection GradleDependency
-    implementation "androidx.compose.ui:ui:$compose_version"
-    //noinspection GradleDependency
-    implementation "androidx.compose.material:material:$compose_version"
-    //noinspection GradleDependency
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    
-    //jetpack compose component
-    //noinspection GradleDependency
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    //noinspection GradleDependency
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
 
-    //jetpack compose view pager
+    /*************************************** Material Design Components ***************************************/
+    //https://maven.google.com/web/index.html#com.google.android.material:material
+    implementation 'com.google.android.material:material:1.9.0'
+
+    /*********************************** lifecycle *****************************************/
+    //Lifecycles only (without ViewModel or LiveData)
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    
+    /*********************************** jetpack compose *****************************************/
+
+    //the main APIs for the underlying toolkit systems, such as input and measurement/layout
+    implementation "androidx.compose.ui:ui:$compose_version"
+
+    //Material Design 2
+    implementation "androidx.compose.material3:material3:1.1.0-alpha06"
+
+    //Android Studio Preview support, 用于可视化 Compose UI
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    //Integration with activities
+    implementation "androidx.activity:activity-compose:1.7.0-beta01"
+
+    // UI Tests
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
+    //view pager
     implementation "com.google.accompanist:accompanist-pager:$compose_accompanist_version"
     implementation "com.google.accompanist:accompanist-pager-indicators:$compose_accompanist_version"
 
-    //Junit Unit Test
-    //noinspection GradleDynamicVersion
+    /************************************* Test *******************************************/
     testImplementation 'junit:junit:4.+'
     
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    //noinspection GradleDependency
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    
-    //compose ui debug tool，用于可视化 Compose UI
-    //noinspection GradleDependency
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
 
 afterEvaluate {
