--- a/SwordDemoLibrary/gradle.properties
+++ b/SwordDemoLibrary/gradle.properties
@@ -22,3 +22,4 @@ kotlin.code.style=official
 android.injected.testOnly=false
 
 android.experimental.legacyTransform.forceNonIncremental=true
+org.gradle.unsafe.configuration-cache=true
