--- a/SwordDemoLibrary/settings.gradle
+++ b/SwordDemoLibrary/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = "SwordDemoLibrary"
 include ':app'
 include ":compose"
-//include ':leetcode'
+include ':leetcode'
 //include ':datastruct'
 
 println "Hello setting.gradle"
