OkHttpClient 源码解析 - 拦截器链逻辑梳理

--- a/SwordDemoLibrary/gradle.properties
+++ b/SwordDemoLibrary/gradle.properties
@@ -22,4 +22,4 @@ kotlin.code.style=official
 android.injected.testOnly=false
 
 android.experimental.legacyTransform.forceNonIncremental=true
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
