--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true" 
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="AllowBackup,UnusedAttribute">
         <activity
             android:name="sword.MainActivity"
