图片选取功能

--- a/SwordDemoLibrary/app/src/main/AndroidManifest.xml
+++ b/SwordDemoLibrary/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <activity android:name="sword.ChangeUIOnThreadActivity"/>
 
-        <activity android:name="sword.data.photopicker.GalleryActivity" />
+        <activity android:name="sword.photo.XlcwGalleryActivity" />
 
         <activity android:name="sword.annotation.AnnotationActivity"/>
     </application>
