备份修改包体名称的 Gradle 脚本

--- a/SwordDemoLibrary/app/utils.gradle
+++ b/SwordDemoLibrary/app/utils.gradle
@@ -36,3 +36,13 @@ def getGitCommitId() {
     println "commitId: ${commitId.toString()}"
     return commitId.toString()
 }
+
+
+def modifyPackageName() {
+    android.libraryVariants.configureEach { variant ->
+        variant.outputs.all { output ->
+            String date = new Date().format("yyyyMMdd", TimeZone.getDefault())
+            outputFileName = "${project.name}_${android.defaultConfig.versionName}_${android.defaultConfig.versionCode}_${getGitCommitId()}_${date}.aar"
+        }
+    }
+}
