--- a/SwordDemoLibrary/app/build.gradle
+++ b/SwordDemoLibrary/app/build.gradle
@@ -158,7 +158,7 @@ dependencies {
 
 afterEvaluate {
 	def packageTask = this.tasks.findByName("packageRelease")
-	this.tasks.all {
+	this.tasks.configureEach {
 		println "${getName()}"
 	}
 }
